# ai_mentor

./: .deploy-helpers.sh  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS_UPDATE.md  PRODUCTION_SEED_INFO.md  PRODUCTION_SETUP_SUMMARY.md  QUICK_DEPLOY.md  README.md  RLS_POLICIES_VERIFICATION.md  SEED_DATA_INFO.md  SESSION_LOG_ADD_PARAGRAPH_FIELDS_2025-11-11_07-02.md  SESSION_LOG_FIX_GOOGLE_OAUTH_LOGIN_2025-12-19_04-55.md  SESSION_LOG_FIX_ONBOARDING_RLS_2025-12-19_06-30.md  SESSION_LOG_GOOGLE_OAUTH_STUDENT_AUTH_2025-12-18_12-30.md  SESSION_LOG_GOSO_MVP_ALEMBIC_GRAPH_FIX_2025-12-12_16-30.md  SESSION_LOG_House_Theme_Application_2025-10-30.md  SESSION_LOG_Iteration3_Completion_2025-10-29_1730.md  SESSION_LOG_Iteration4B_Completion_2025-10-30.md  SESSION_LOG_Iteration5A_Phase1_Backend_Schools_API_2025-10-30.md  SESSION_LOG_Iteration5A_Phase2_Frontend_Setup_2025-10-30.md  SESSION_LOG_Iteration5A_Phase3_Layout_Navigation_2025-10-30.md  SESSION_LOG_Iteration5A_Phase4_Schools_CRUD_2025-10-30.md  SESSION_LOG_Iteration5B_Phase5_Testing_Polishing_2025-11-02.md  SESSION_LOG_Iteration5B_Textbooks_CRUD_RichTextEditor_2025-10-30.md  SESSION_LOG_Iteration5C_Global_Tests_2025-11-02.md  SESSION_LOG_Iteration5D_Users_Classes_2025-11-05.md  SESSION_LOG_Iteration5E_Library_Content_2025-11-06.md  SESSION_LOG_Iteration5F_UI_Testing_Optimization_2025-11-06.md  SESSION_LOG_Iteration6_RLS_FINAL_2025-11-06.md  SESSION_LOG_Iteration6_RLS_Multi_Tenancy_2025-11-06.md  SESSION_LOG_Iteration7_Student_API_2025-01-07.md  SESSION_LOG_Production_Deploy_AI_Mentor_2025-11-08_06-54.md  audio-text-generator.skill  create_copyright_ref.js  deploy-infra.sh  deploy.sh  diagnostic-test-generator.skill  (+12 more)
admin-v2/: .dockerignore  ARCHITECTURE.md  Dockerfile.prod  SESSION_LOG_ADMIN_V2_FOUNDATION_2025-12-17_13-30.md  SESSION_LOG_DATATABLE_PHASE2_2025-12-17_18-30.md  SESSION_LOG_PHASE3_TESTS_GOSO_2025-12-17.md  SESSION_LOG_PHASE4_SCHOOL_ADMIN_PANEL_2025-12-17_21-30.md  next.config.ts  package-lock.json  package.json
audio-text-generator/: SKILL.md  state.json
backend/: Dockerfile  Dockerfile.prod  (+17 more)
(+1325 files in other folders)
